server/compilers/goLiteJS/src/test/ml1/invalid/array3.go
//missing left bracket in index access
package main
var x [3]int

func main() {
x3] = 1
}
